------------------------------------------------------------------------
r2854 | gaser | 2025-07-28 10:18:23

Changed paths:
 M CHANGES.txt

Added:   Added CAT_SurfCorrectThicknessFolding to binries.


------------------------------------------------------------------------
r2853 | gaser | 2025-07-28 10:17:49

Changed paths:
 M CAT.glnx86/CAT_Surf2Sphere
 M CAT.glnx86/CAT_SurfCentral2Pial
 M CAT.glnx86/CAT_SurfDeform
 M CAT.glnx86/CAT_SurfDistance
 M CAT.glnx86/CAT_SurfWarp
 M CAT.glnx86/CAT_VolMarchingCubes
 M CAT.glnx86/CAT_VolThicknessPbt
 M CAT.maca64/CAT_Surf2Sphere
 M CAT.maca64/CAT_SurfCentral2Pial
 M CAT.maca64/CAT_SurfDeform
 M CAT.maca64/CAT_SurfDistance
 M CAT.maca64/CAT_SurfWarp
 M CAT.maca64/CAT_VolMarchingCubes
 M CAT.maca64/CAT_VolThicknessPbt
 M CAT.w32/CAT_Surf2Sphere.exe
 M CAT.w32/CAT_SurfCentral2Pial.exe
 M CAT.w32/CAT_SurfDeform.exe
 M CAT.w32/CAT_SurfDistance.exe
 M CAT.w32/CAT_SurfWarp.exe
 M CAT.w32/CAT_VolMarchingCubes.exe
 M CAT.w32/CAT_VolThicknessPbt.exe
 M CHANGES.txt

Fixed:   Corrected misspelled name of hyopthalamus atlas.
Added:   Added CAT_SurfCorrectThicknessFolding to binries.
Changed: Recompiled binaries


------------------------------------------------------------------------
r2852 | gaser | 2025-07-28 10:12:38

Changed paths:
 M CAT.maca64/CAT_AddValuesToSurf
 M CAT.maca64/CAT_AverageSurfaces
 M CAT.maca64/CAT_BlurSurfHK
 M CAT.maca64/CAT_DumpCurv
 M CAT.maca64/CAT_DumpSurfArea
 M CAT.maca64/CAT_DumpSurfaceRatio
 M CAT.maca64/CAT_FixTopology
 M CAT.maca64/CAT_FractalDimension
 M CAT.maca64/CAT_Hausdorff
 M CAT.maca64/CAT_Isometize
 M CAT.maca64/CAT_MarkDefects
 M CAT.maca64/CAT_RefineMesh
 M CAT.maca64/CAT_ResampleSphericalSurf
 M CAT.maca64/CAT_ResampleSphericalSurfSPH
 M CAT.maca64/CAT_ResampleSurf
 M CAT.maca64/CAT_SelfIntersect
 M CAT.maca64/CAT_SeparatePolygon
 M CAT.maca64/CAT_SmoothConvexity
 M CAT.maca64/CAT_SulcusDepth
 M CAT.maca64/CAT_Surf2Sphere
 M CAT.maca64/CAT_SurfCentral2Pial
 M CAT.maca64/CAT_SurfDeform