@@ -1,4 +1,15 @@
 ------------------------------------------------------------------------
+r2857 | gaser | 2025-07-30 13:17:28
+
+Changed paths:
+ M CHANGES.txt
+ M cat_surf_createCS4.m
+ M cat_vol_pbtsimpleCS4.m
+
+Added: Added folding correction for thickness.
+
+
+------------------------------------------------------------------------
 r2854 | gaser | 2025-07-28 10:18:23
 
 Changed paths:
